Imagenes renderizadas y rutas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="Icon-var">
-            <img src="/Imagenes/hidrocompras.png" alt="" width="90px" height="50px">
+            <img src="./img/hidrocompras.avif" alt="" width="90px" height="50px">
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-light" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active text-light" aria-current="page" href="#mostrar-principal">Nuestros Servicios</a>
@@ -37,7 +40,7 @@
           <a class="nav-link text-light" href="#acerca-de-nosotros">Contactanos</a>
         </li>
       </ul>
-      <a href="carrito.html" id="comprar"><img src="productos/comprar.png" alt=""></a>
+      <a href="carrito.html" id="comprar"><img src="./img/compras.avif" alt="" class="bg-white"></a>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
         <button class="btn" type="submit" style="background-color: #6EC2F7;"><i class="bi bi-search"></i></button>
@@ -54,7 +57,7 @@
     <main>
         <div class="text-center" id="mostrar-principal">
             <h1 class="principal-titulo">Comprar en linea nunca fue <br>tan facil</h1>
-            <button class="btn btn-principal abs-center" type="submit" style="background-color: #2980f2"> <a href="#productos-contenedor" ><img src="productos/comprarahora.png" alt="" class="comprarNow"></i><br> Comprar Ahora</a>
+            <button class="btn btn-principal abs-center" type="submit" style="background-color: #2980f2"> <a href="#productos-contenedor" ><img src="./img/compras-online.avif" alt="" class="comprarNow"></i><br> Comprar Ahora</a>
                 </button>
         </div>
 <!--PRODUCTPS INICIO-->
@@ -63,20 +66,20 @@
             <table class="productos">
                 <tr>
                     <th>
-                        <i><img src="productos/bomba.png" alt=""></i> <br>
+                        <i><img src="./img/bomba.avif" alt=""></i> <br>
                         <a href="bombas.html" target="_blank"> Bombas Centrifugas</a> 
                         
                     </th>
                     <th>
-                        <i> <img src="/productos/tanque.png" alt=""></i> <br>
+                        <i> <img src="./img/tanque.avif" alt=""></i> <br>
                         <a href="tanques.html">Tanques</a> 
                     </th>
                     <th>
-                        <i><img src="productos/pscina.png" alt=""></i> <br>
+                        <i><img src="./img/piscina.avif" alt=""></i> <br>
                         <a href="combos.html">Piscina</a> 
                     </th>
                     <th>
-                        <i><img src="productos/manguera.png" alt=""></i> <br>
+                        <i><img src="./img/manguera-de-fuego.avif" alt=""></i> <br>
                         <a href="accesorios.html">Mangueras y tuberia</a> 
                     </th>
                 </tr> 
@@ -86,12 +89,12 @@
 <table class="productos">
   <tr>
       <th>
-          <i><img src="productos/oferta.png" alt=""></i> <br>
+          <i><img src="./img/oferta-especial.avif" alt=""></i> <br>
           <a href="bombas.html" target="_blank"> Ofertas</a> 
           
       </th>
       <th>
-          <i> <img src="/productos/herramientas.png" alt=""></i> <br>
+          <i> <img src="./img/caja-de-herramientas.avif" alt=""></i> <br>
           <a href="tanques.html">Herramientas</a> 
       </th>
 
@@ -111,27 +114,27 @@
         <div class="container text-center">
             <h2>Marcas con las que trabajamos</h2>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/1.jfif" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/2.png" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/3.png" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/1.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/2.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/3.avif" alt=""></div>
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/4.jfif" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/5.jpg" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/6.png" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/4.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/5.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/6.avif" alt=""></div>
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/7.png" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/8.png" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/9.png" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/7.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/8.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/9.avif" alt=""></div>
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/10.png" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/11.png" alt=""></div>
-                <div class="col-lg-4 col-md-6 col-sm-12"><img src="/Marcas/12.png" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/10.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/11.avif" alt=""></div>
+                <div class="col-lg-4 col-md-6 col-sm-12"><img src="./img/12.avif" alt=""></div>
             </div>
         </div>
     </main>
@@ -145,7 +148,7 @@
           <div class="box">
             <figure>
               <a href="#">
-                <img src="/Imagenes/hidrocompras.png" alt="logo">
+                <img src="./img/hidrocompras.avif" alt="logo">
               </a>
             </figure>
           </div>
