--- a/combos.html
+++ b/combos.html
@@ -15,29 +15,41 @@
         <link rel="icon" type="image/x-icon" href="/Imagenes/hidrocompras.png">
 </head>
 <body>
+    <!--BARRA DE NAVEGACIÓN INICIO-->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="Icon-var">
-            <img src="/Imagenes/hidrocompras.png" alt="" width="90px" height="50px">
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Menu principal<i class="bi bi-house"></i></a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn bg-info" type="submit">Search</button>
-      </form>
-    </div>
+      <nav class="navbar navbar-expand-lg bg-black">
+<div class="container-fluid">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="Icon-var">
+          <img src="./img/hidrocompras.avif" alt="" width="90px" height="50px">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active text-light" aria-current="page" href="index.html">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active text-light" aria-current="page" href="#mostrar-principal">Nuestros Servicios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" href="#productos-contenedor">Nuestros Productos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" href="#acerca-de-nosotros">Contactanos</a>
+      </li>
+    </ul>
+    <a href="carrito.html" id="comprar"><img src="productos/comprar.png" alt=""></a>
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+      <button class="btn" type="submit" style="background-color: #6EC2F7;"><i class="bi bi-search"></i></button>
+    </form>
   </div>
+</div>
 </nav>
-    </header>
+  </header>
+  <!--BARRA DE NAVEGACIÓN FINAL-->
 
     <main>
       <div class="container contenedor-bombas "  >
@@ -45,7 +57,7 @@
           <tr>
             <th>    
             <div class="card card-producto-venta" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="./img/4.avif" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -63,7 +75,7 @@
             </th>
             <th>
               <div class="card card-producto-venta" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./img/4.avif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -81,7 +93,7 @@
             </th>
             <th>           
             <div class="card card-producto-venta" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="./img/4.avif" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -102,7 +114,7 @@
           <tr>
             <th>    
             <div class="card card-producto-venta" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="./img/4.avif" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -120,7 +132,7 @@
             </th>
             <th>
               <div class="card card-producto-venta" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./img/4.avif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -138,7 +150,7 @@
             </th>
             <th>           
             <div class="card card-producto-venta" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="./img/4.avif" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
